--- a/style/style.css
+++ b/style/style.css
@@ -45,4 +45,44 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+	
+}
+/*
+
+//////////////////////////////////////////////////////
+
+                       TOPO
+				
+//////////////////////////////////////////////////////
+
+*/
+
+
+header{
+	margin: 2vw 4vw 0vw 4vw ;
+}
+header nav ul {
+ display: flex ;
+ justify-content: right;
+}
+header nav ul li {
+	margin: 0px 10px 0px 10px ;
+}
+header nav ul li.book a{
+	color: black;
+}
+header nav ul li.cinza a {
+	color: rgb(68, 68, 68);
+}
+header nav a {
+	color: rgb(71, 71, 71);
+}
+header nav a strong {
+	color: black;
+}
+section p  {
+   display: flex;
+}
+section.baner div h1 {
+	font-weight: bold;
 }
